css/main.scss
body {
    margin: 1em;
    margin-top: 10em;
    padding: 0;
    border: 0;
    color: $text-color;
    background-color: $background-color;
    font-family: $reading-font-family;
}
body * {
  line-height: $line-height;
}

img {
  max-width: 100%;
}

a {
  color: $link-color;
  text-decoration: none;
  cursor: pointer;
}

p.header {
  font-family: $technic-font-family;
  position: fixed;
  background-color: $background-color;
  top: 0;
  margin-top: 0;
  right: 0;
  left: 0;
}
p.header span,
p.header a {
  display: inline-block;
  text-transform: lowercase;
  padding: $cell-space-vertical $cell-space-horizontal;
}
p.home {
  border-top: 1px dotted $link-color;
  padding-top: .5em;
}

p.header img {
  height: 1em;
}

span.date {
  background-color: $link-color;
  color: $background-color;
}

